--- a/app/templates/projects.html
+++ b/app/templates/projects.html
@@ -7,15 +7,15 @@
 
     <div id="el" v-cloak >
       <div class="head fixed-top bg-white" style="z-index: 3;">
-        <nav class="navbar navbar-expand navbar-light shadow-sm px-sm-5 px-0">
+        <nav class="navbar navbar-expand navbar-light shadow-sm px-sm-5 px-0 ">
                 <a class="navbar-brand" style="font-size: 1.65rem !important; font-weight:200 !important;" href="{{ url_for('index') }}">DHDKey!</a>
                 {% if title != "Confirmation" %}
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                   <span class="navbar-toggler-icon"></span>
                 </button>
             
-                <div class="collapse navbar-collapse pt-1  px-0" id="navbarSupportedContent">
-                  <ul class="navbar-nav mr-auto ">
+                <div class="pt-1" id="navbarSupportedContent">
+                  <ul class="navbar-nav">
                       <li class="nav-item {% if title == 'Home' %}active{% endif %}">
                           <a class="text-nowrap nav-link" href="{{ url_for('index') }}">Home</a>
                       </li>
@@ -25,40 +25,54 @@
                       <li class="nav-item">
                           <a class="text-nowrap nav-link {% if title == 'Upload' %}active{% endif %}" href="{{ url_for('upload') }}">Upload</a>
                       </li>
-                      <li class="nav-item">
+                      <li class="nav-item ">
                           <a class="text-nowrap nav-link {% if title == 'Info' %}active{% endif %}" href="{{ url_for('info') }}">Info</a>
                       </li>
                   </ul>
+                </div>
 
-                  <div class="my-0 mx-3 col-6 reverse d-none">
-                            <input id="search-input" type="text" v-model="query" oninput="processChange()"
-                              class="form-control" placeholder="Search">
+                
+                <div style="width: 1rem; height: 100%;"></div>
+                
+
+
+                <div class="row pt-1 gap-0 col-lg-7 col-xl-8 col-md-6">
+                  <div class="my-0 mr-0 col-11 col-md-7 reverse d-none pr-0">
+                    <input id="search-input" type="text" v-model="query" oninput="processChange()"
+                      class="form-control pr-0" placeholder="Search">
                   </div>
-                  <div class="col-3  d-flex flex-row flex-nowrap gap-1">
-                    <a href="#" data-bs-target="#sidebar-left" data-bs-toggle="collapse"  onclick="toggleFiltersSidebar()" class="btn btn-secondary rounded-3 reverse d-none"><i class="fas fa-filter text-light"></i></a>
+                  <div class="ml-0 col-3 d-none d-md-flex py-1 flex-row flex-nowrap gap-1 justify-content-start pl-0">
+                    <a href="#" data-bs-target="#sidebar-left" data-bs-toggle="collapse"  onclick="toggleFiltersSidebar()" class="btn btn-secondary rounded-3 reverse d-none pl-0 ml-0"><i class="fas fa-filter text-light"></i></a>
                     <a href="#" data-bs-target="#sidebar-right" data-bs-toggle="collapse" class="btn btn-warning rounded-3 reverse d-none"><i class="fas fa-chart-pie text-black-50"></i></a>
                     {% if author %}
                     <a href="{{ url_for('projects') }}" class="btn btn-primary rounded-3 reverse d-none"><i class="fas fa-arrow-rotate-left text-light"></i></a>
                     {% endif %}
-                   
-       
-                 </div>
+                  </div>
+                </div>
+
+                <div class="flex-fill">
 
                 </div>
+                
+
+                <div
+                  data-bs-trigger="click"
+                  data-bs-toggle="tooltip" data-bs-custom-class="custom-tooltip" data-bs-html="true" 
+                      data-bs-title="
+                      <div class='d-flex flex-column gap-1'>
+                              <div>Need help?</div>
+                              <div><a href='mailto:nikolai.gorbachev@studio.unibo.it' class='text-white'>Report a problem</a></div>
+                      </div>"
+                      data-bs-placement="bottom"
+                      class="text-dark text-decoration-none mr-0" style="cursor: pointer;"><i class="far fa-question-circle bg-white text-secondary icon fa-2x"></i>
+                    </div>
+
+
 
                 
                 {% endif %}
 
-                <div
-                                    data-bs-trigger="click"
-                                    data-bs-toggle="tooltip" data-bs-custom-class="custom-tooltip" data-bs-html="true" 
-                                        data-bs-title="
-                                        <div class='d-flex flex-column gap-1'>
-                                                <div>Need help?</div>
-                                                <div><a href='mailto:nikolai.gorbachev@studio.unibo.it' class='text-white'>Report a problem</a></div>
-                                        </div>"
-                                        data-bs-placement="bottom"
-                                        class="text-dark text-decoration-none" style="cursor: pointer;"><i class="far fa-question-circle bg-white text-secondary icon fa-2x"></i></div>
+                
                 
             </nav>
       </div>
