--- a/app/templates/projects.html
+++ b/app/templates/projects.html
@@ -55,17 +55,19 @@
                 </div>
                 
 
-                <div
-                  data-bs-trigger="click"
-                  data-bs-toggle="tooltip" data-bs-custom-class="custom-tooltip" data-bs-html="true" 
-                      data-bs-title="
-                      <div class='d-flex flex-column gap-1'>
-                              <div>Need help?</div>
-                              <div><a href='mailto:nikolai.gorbachev@studio.unibo.it' class='text-white'>Report a problem</a></div>
-                      </div>"
-                      data-bs-placement="bottom"
-                      class="text-dark text-decoration-none mr-0" style="cursor: pointer;"><i class="far fa-question-circle bg-white text-secondary icon fa-2x"></i>
-                    </div>
+                <div id="tooltip-help-p"
+                                    data-bs-trigger="click"
+                                    data-bs-toggle="tooltip" data-bs-custom-class="custom-tooltip" data-bs-html="true" 
+                                        data-bs-title="
+                                        <div class='d-flex flex-column gap-1'>
+                                                <div><a  href='#' id='need-help-link-p' class='text-white'>Need help?</a></div>
+                                                <div><a href='mailto:nikolai.gorbachev@studio.unibo.it' class='text-white'>Report a problem</a></div>
+                                        </div>"
+                                        data-bs-template='
+                                        <div class="tooltip" role="tooltip"><div class="tooltip-arrow"></div><div class="tooltip-inner"></div></div>
+                                        '
+                                        data-bs-placement="bottom"
+                                        class="text-dark text-decoration-none" style="cursor: pointer;"><i class="far fa-question-circle bg-white text-secondary icon fa-2x"></i></div>
 
 
 
@@ -122,16 +124,55 @@
               <!-- <form class="navbar-form navbar-left">
                 <div class="form-group row"> -->
                   
-                    <div class="col-12">
+                    <div class="col-12"
+                    
+                    data-bs-trigger="manual" data-bs-selector="true"
+                                            data-bs-toggle="tooltip" data-bs-custom-class="custom-tooltip" data-bs-html="true" 
+                                                data-bs-title="
+                                                <div class='d-flex flex-column gap-1'>
+                                                        <div>1/3</div>
+                                                        <div>Here you can find all the DHDKey projects</div>
+                                                        <div><a id='guide-ok-button-1-p' href='#' class='text-white'>OK</a></div>
+                                                </div>"
+                                                data-bs-placement="bottom"
+                    >
                       <input id="search-input" type="text" v-model="query" oninput="processChange()"
-                        class="form-control" placeholder="Search">
+                        class="form-control" placeholder="Search"
+                        
+                        >
+
+
+                        
                     </div>
 
-                      <div class="d-none col-2 d-inline-flex flex-nowrap justify-content-evenly gap-1 py-1">
-                        <a href="#" data-bs-target="#sidebar-left" data-bs-toggle="collapse" onclick="toggleFiltersSidebar()" class="btn btn-secondary rounded-3"><i class="fas fa-filter text-light"></i></a>
+                      <div class="d-none col-2 d-inline-flex flex-nowrap justify-content-evenly gap-1 py-1"
+                      id="tooltip-guide-2-p" 
+                      data-bs-trigger="hover focus" data-bs-selector="true"
+                        data-bs-toggle="tooltip" data-bs-custom-class="custom-tooltip" data-bs-html="true" 
+                            data-bs-title="
+                            <div class='d-flex flex-column gap-1'>
+                                    <div>2/3</div>
+                                    <div>Here you can upload one of your own!</div>
+                                    <div><a id='guide-ok-button-2-p' href='#' class='text-white'>OK</a></div>
+                            </div>"
+                            data-bs-placement="bottom"
                       
+                      >
+                        <a href="#" data-bs-target="#sidebar-left" data-bs-toggle="collapse" onclick="toggleFiltersSidebar()" class="btn btn-secondary rounded-3"><i class="fas fa-filter text-light"></i></a>
+                        
                         <a href="#" data-bs-target="#sidebar-right" data-bs-toggle="collapse"  class="btn btn-warning rounded-3"><i class="fas fa-chart-pie text-black-50"></i></a>
-
+                        <a id="tooltip-guide-3-p" class="text-nowrap nav-link {% if title == 'Info' %}active{% endif %}" href="{{ url_for('info') }}"
+                        data-bs-trigger="manual" data-bs-selector="true"
+                        data-bs-toggle="tooltip" data-bs-custom-class="custom-tooltip" data-bs-html="true" 
+                            data-bs-title="
+                            <div class='d-flex flex-column gap-1'>
+                                    <div>3/3</div>
+                                    <div>Having some questions?</div>
+                                    <div>Find here some useful info and contacts!</div>
+                                    <div><a id='guide-ok-button-3-p' href='#' class='text-white'>OK</a></div>
+                            </div>"
+                            data-bs-placement="bottom"
+                        >Info</a>
                         {% if author %}
                         <a href="{{ url_for('projects') }}" class="btn btn-primary rounded-3"><i class="fas fa-arrow-rotate-left text-light"></i></a>
                         {% endif %}
@@ -440,6 +481,11 @@
   <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/minisearch@6.1.0/dist/umd/index.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.0/dist/chart.umd.min.js"></script>
+
+  <script>
+    const tooltipTriggerList1 = document.querySelectorAll('[data-bs-toggle="tooltip"]')
+    const tooltipList1 = [...tooltipTriggerList1].map(tooltipTriggerEl => new bootstrap.Tooltip(tooltipTriggerEl))
+  </script>
   <script>
 
 rows = {{ data | tojson | safe}};
@@ -458,7 +504,59 @@ if (search_input === 'None') {
 }
 
 
+
+
+const helpButtonWithTooltipP = document.getElementById('tooltip-help-p')
+        var tooltipFromHelpButtonP = bootstrap.Tooltip.getOrCreateInstance(helpButtonWithTooltipP)
+    const projectsLinkWithTooltipP = document.getElementById('search-input')
+        var tooltipFromProjectsLinkP = bootstrap.Tooltip.getOrCreateInstance(projectsLinkWithTooltipP)
+    const uploadLinkWithTooltipP = document.getElementById('tooltip-guide-2-p')
+        var tooltipFromUploadLinkP = bootstrap.Tooltip.getOrCreateInstance(uploadLinkWithTooltipP)
+    const infoLinkWithTooltipP = document.getElementById('tooltip-guide-3-p')
+        var tooltipFromInfoLinkP = bootstrap.Tooltip.getOrCreateInstance(infoLinkWithTooltipP)
+
+
 $(document).ready(function() {
+
+  helpButtonWithTooltipP.addEventListener('shown.bs.tooltip', () => {
+            $('#need-help-link-p').click(
+                function(e){
+                    tooltipFromHelpButtonP.hide()
+                    tooltipFromProjectsLinkP.show()
+                }
+            );
+        });
+        projectsLinkWithTooltipP.addEventListener('shown.bs.tooltip', () => {
+            $('#guide-ok-button-1-p').click(
+                function(e){
+                    tooltipFromUploadLinkP.show()
+                    tooltipFromProjectsLinkP.hide()
+                }
+            );
+        });
+        uploadLinkWithTooltipP.addEventListener('shown.bs.tooltip', () => {
+            $('#guide-ok-button-2-p').click(
+                function(e){
+                    tooltipFromInfoLinkP.show()
+                    tooltipFromUploadLinkP.hide()
+                }
+            );
+        });
+        infoLinkWithTooltipP.addEventListener('shown.bs.tooltip', () => {
+            $('#guide-ok-button-3-p').click(
+                function(e){
+                    tooltipFromInfoLinkP.hide()
+                }
+            );
+        });
+
+
+
+
+
+
+
+
   var body = document.body,
     html = document.documentElement;
   var height = Math.max( body.scrollHeight, body.offsetHeight, 
@@ -833,10 +931,7 @@ const ctx = document.getElementById('myChart');
 
 
      </script>
-    <script>
-      // const tooltipTriggerList = document.querySelectorAll('[data-bs-toggle="tooltip"]')
-      //             const tooltipList = [...tooltipTriggerList].map(tooltipTriggerEl => new bootstrap.Tooltip(tooltipTriggerEl))
-    </script>
+    
     <style>
       .custom-tooltip {
           --bs-tooltip-bg: var(--bs-dark);
