--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -34,7 +34,7 @@
             <form  action="{{ url_for('projects') }}"  class="navbar-form navbar-left" autocomplete="off">
               <div class="row">
                 <div class="col-10">
-                  <input type="text" v-model="query" onkeypress="preventSubmitting(event)" onfocus="showOptions()"  oninput="showOptions()"  class="form-control search-input" id="search-input" placeholder="Search for a project by name">
+                  <input type="text" v-model="query" onkeypress="preventSubmitting(event)" onfocus="showOptions()"  oninput="showOptions()"  class="form-control search-input" id="search-input" placeholder="Search for a project by name, description or authors">
                 </div>
                 <div class="col-2">
                   <a class="btn btn-primary" style="width:100%; height: 35px !important;  border-radius: 0px 4px 4px 0px !important" v-bind:href= "'{{ url_for('projects', search="") }}' + [[ query ]]">
@@ -44,11 +44,14 @@
               </div>
               
               <div id="search-options-list"  class="search-options-list col-10 pr-0 card shadow-sm w-50 hidden" style="position: absolute; z-index: 10; overflow-y: scroll; max-height: 20rem;">
-                <div class="proj-item search-option" v-for="item of searchResult.data.items">
-                    <p class="mt-3" style="word-wrap: break-word;">
-                      <a class="text-dark mr-2 mt-2" v-bind:href= "'{{ url_for('projects', search="") }}' + [[item.title]]">[[ item.title ]]</a>
+                <div class="search-option proj-item-index px-3 py-3 d-flex flex-column gap-2" v-for="item of searchResult.data.items">
+                    <p class="mb-0" style="word-wrap: break-word;">
+                      <a class="text-dark" style="font-size: 1rem;" v-bind:href= "'{{ url_for('projects', search="") }}' + [[item.title]]">[[ item.title ]]</a>
                     </p>
-                    <a class="badge mr-2 mt-2" v-for="(aut, index) in item.authors" v-bind:href= "'{{ url_for('projects', id="") }}' + [[getId(index,item.ids)]]">[[ aut ]]</a>
+
+                    <div class="d-flex flex-row flex-wrap">
+                      <a class="py-0 px-0 my-0 me-2 text-secondary text-nowrap" style="font-size: 0.75rem;" v-for="(aut, index) in item.authors" v-bind:href= "'{{ url_for('projects', id="") }}' + [[getId(index,item.ids)]]">[[ aut ]]</a>
+                    </div>
                 </div>
               </div>
             </form>
