small changes at index layout

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block content %}
-<div class="container d-flex flex-column d-flex justify-content-start" style="height: 100%;">
+<div class="container d-flex flex-column d-flex justify-content-start pt-5" style="height: 100%;">
   <!-- <div class="container d-flex flex-column justify-content-start py-5 my-5" style="background-color: red;"> -->
     <!-- e9ecef-->
 
@@ -24,7 +24,7 @@
           </div>
           
       </div>
-      <div class="row mt-4">
+      <div class="row">
 
         
           
