small fix at alert styling

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -161,7 +161,7 @@
         {% if cookies_check() %}
         {% else %}
 
-        <div class="fixed-bottom  alert-info p-4" id="cookie-consent-container">
+        <div class="fixed-bottom alert alert-info p-4 mb-0" id="cookie-consent-container">
             <div class="container">
                 <div class="notice row small d-none d-md-flex">
                     <div class="cookie-text col-9">This website uses third-party cookies for security reasons. By continuing to browse the site, or by clicking on "I accept", you consent to the use of cookies. 
