chart visual updates, sorting by year fixed

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -30,8 +30,8 @@
                             <nav class="navbar navbar-expand navbar-light shadow-sm px-sm-5 px-0">
                                     <a class="navbar-brand" style="font-size: 1.65rem !important; font-weight:200 !important;" href="{{ url_for('index') }}">DHDKey!</a>
                                     {% if title != "Confirmation" %}
-                                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                                    <span class="navbar-toggler-icon"></span>
+                                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                                        <span class="navbar-toggler-icon"></span>
                                     </button>
                                 
                                     <div class="collapse navbar-collapse pt-1" id="navbarSupportedContent">
