--- a/app/templates/projects.html
+++ b/app/templates/projects.html
@@ -7,14 +7,16 @@
 
     <div id="el" v-cloak >
       <div class="head fixed-top bg-white" style="z-index: 3;">
+
+        <!-- TODO: think of more reponsive navbar settings -->
         <nav class="navbar navbar-expand navbar-light shadow-sm px-sm-5 px-0 ">
                 <a class="navbar-brand" style="font-size: 1.65rem !important; font-weight:200 !important;" href="{{ url_for('index') }}">DHDKey!</a>
                 {% if title != "Confirmation" %}
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                   <span class="navbar-toggler-icon"></span>
                 </button>
             
-                <div class="pt-1" id="navbarSupportedContent">
+                <div class="pt-1 collapse navbar-collapse" id="navbarSupportedContent">
                   <ul class="navbar-nav">
                       <li class="nav-item {% if title == 'Home' %}active{% endif %}">
                           <a class="text-nowrap nav-link" href="{{ url_for('index') }}">Home</a>
@@ -105,7 +107,8 @@
                 {% else %}
                 <li class="breadcrumb-item active" aria-current="page">All Projects</li>
                 {% endif %}
-              </ol> -->
+              </ol>
+            </nav> -->
               
 
           
@@ -313,7 +316,7 @@
                 </div> -->
               </div>
             </form>
-            <div class="d-none d-sm-none d-md-block">
+            <div class="d-block">
               <div v-for="facet in searchResult.data.aggregations">
                 <h5 style="margin-bottom: 5px;"><strong style="color: #337ab7;">[[
                     facet.title ]]</strong></h5>
@@ -422,10 +425,8 @@
             <div id="carouselExample" class="carousel carousel-dark slide" data-bs-interval="false">
               <div class="carousel-inner">
                 <div class="carousel-item active">
-                  <div class="d-flex flex-column justify-content-start align-items-center gap-3">
-                    <div>
+                  <div class="d-flex flex-column justify-content-center align-items-center gap-2" style="height: 25rem;">
                       <canvas id="myChart"></canvas>
-                    </div>
                     <div class="btn-group" role="group" aria-label="Basic radio toggle button group">
                       <input type="radio" class="btn-check" name="btnradio" id="btnradio1" autocomplete="off" checked onclick="updateChartAggregations('course')">
                       <label class="btn btn-outline-primary" for="btnradio1">Course</label>
@@ -435,7 +436,7 @@
                   </div>
                 </div>
                 <div class="carousel-item">
-                  <div class="mb-2">
+                  <div class="d-flex flex-column justify-content-center px-3 py-2" style="height: 25rem;">
                     <canvas id="myBarChart"></canvas>
                   </div>
                 </div>
@@ -737,7 +738,16 @@ miniSearch.addAll(rows);
 
 var configuration = {
   // searchableFields: ['title', 'description', 'authors'],
-  // sortings: { name_asc: {field: 'title', order: 'asc'}},
+  // sortings: { 
+  //   name_asc: {
+  //     field: 'title', 
+  //     order: 'desc'
+  //   }, 
+  //   price_desc: {
+	// 		field:  "year",
+	// 		order:  "desc",
+	// 	},
+  // },
   native_search_enabled: false,
   custom_id_field: 'id',
   aggregations: {
@@ -751,9 +761,8 @@ var configuration = {
       size: 10,
       conjunction: false
     },
-  }
+  },
 }
-
 itemsjs = itemsjs(rows, configuration);
 var searchResultData = []
 
@@ -778,6 +787,7 @@ var vm = new Vue({
    var page = this.page || 1;
    var per_page = this.per_page || 6;
 
+   
    return {
      query: search_input,
      // initializing filters with empty arrays
@@ -796,6 +806,8 @@ var vm = new Vue({
      Object.keys(configuration.aggregations).map(function(v) {
        filters[v] = [];
      })
+
+
 
      this.filters = filters;
      this.page = 1;
@@ -829,12 +841,12 @@ var vm = new Vue({
       itemsjs.reindex(rows)
       rowsData = rows
     }
-
+    
     coursesUnique = rowsData.map(v => v.course).filter(onlyUnique)
-    yearsUnique = rowsData.map(v => v.year).filter(onlyUnique)
-    console.log(rowsData)
-    console.log(coursesUnique)
-    console.log(yearsUnique)
+    yearsUnique = rowsData.map(v => v.year).filter(onlyUnique).sort((a,b) => a>b)
+    // console.log(rowsData)
+    // console.log(coursesUnique)
+    // console.log(yearsUnique)
      var result = itemsjs.search({
        ids: search_results.map(v => v.id),
        page: this.page,
@@ -844,7 +856,7 @@ var vm = new Vue({
     searchResultData = itemsjs.search({
        ids: search_results.map(v => v.id),
        filters: this.filters
-     })     
+     }) 
      console.log('searchresults',searchResultData)
      return result
    }
@@ -892,7 +904,7 @@ const ctx = document.getElementById('myChart');
           });
 
           chart.update()
-        console.log(searchResultData)
+        // console.log(searchResultData)
         }, 10);
       }
 
@@ -904,12 +916,13 @@ const ctx = document.getElementById('myChart');
       
 
       const ctl = document.getElementById('myBarChart');
-      
+      console.log(rowsData)
       ds = []
       counter = 0
       for (course of coursesUnique) {
 
         courseData = []
+        console.log(yearsUnique)
         for (year of yearsUnique) {
           courseCountInYear = 0
           
@@ -934,15 +947,16 @@ const ctx = document.getElementById('myChart');
         )
       }
 
-
+      console.log(ds)
 
       var barChart = new Chart(ctl, {
         type: 'bar',
         data: {
-      labels: searchResultData.data.aggregations.year.buckets.map(v => v.key), 
-      datasets: ds
-      },
+          labels: yearsUnique, 
+          datasets: ds
+        },
             options: {
+              maintainAspectRatio: false,
               plugins: {
                 legend: {
                   display: false
@@ -959,6 +973,8 @@ const ctx = document.getElementById('myChart');
             }
             }
       });
+
+      // barChart.resize(100, 600);
 
       function debounce(func, timeout = 100){
         let timer;
