--- a/app/templates/projects.html
+++ b/app/templates/projects.html
@@ -344,6 +344,9 @@
           <div class="clearfix"></div>
           <div>
             <div class="proj-item" v-for="item of searchResult.data.items">
+              
+              <form v-bind:action="'{{ url_for('EditProject', id="") }}' + [[item.graph]]" method="POST">
+                
               <h3 class="mt-3" style="word-wrap: break-word;">[[ item.title ]]</h3>
               <div class="mb-3 ">
                 <p class="d-flex gap-3"><a class=" text-dark fw-light"
@@ -372,11 +375,11 @@
                   <i class="fas fa-external-link-alt fa-xs"></i></a>
               </div>
               <div>
-                <form v-bind:action="'{{ url_for('update', id="") }}' + [[item.graph]]" method="POST">
+
                   <div>
-                      <input type="submit" class="btn btn-warning mb-3" style="width:100%" name="action" value="Modify">
+                      <input type="submit" class="btn btn-warning mb-3" style="width:100%" name="action" value="EDIT">
                   </div>
-                </form>  
+              </form>  
             </div>
 
             </div>
