--- a/app/templates/update.html
+++ b/app/templates/update.html
@@ -3,7 +3,7 @@
 {% block content %}
 
     <div class= "col-md-10 col-xl-7 mx-auto mt-5 mb-4 card" style="z-index: 0;"> 
-        <h2 class="mb-4 mt-4 display-6">Upload your project!</h2>
+        <h2 class="mb-4 mt-4 display-6">Update your project!</h2>
         <form id="projform" autocomplete="off" action="{{ url_for('update') }}" method="POST">
             
             <!--TITLE-->
@@ -96,9 +96,13 @@
 
             <!--RESPONSIBLE MAIL-->
             <div class="form-group mb-5">
-                <label class="mb-0" for="Responsible">Contact Mail</label>
+                <!-- <label class="mb-0" for="Responsible">Contact Mail</label> -->
                 <!--<small id="ResponsibleHelp" class="form-text text-muted mb-1 mt-0">Email address to which data confirmation form will be sent (24h to confirm)</small>-->
-                <input type="mail" class="form-control" id="Responsible" name="Responsible" pattern="^[a-zA-Z0-9_.+-]+@(?:(?:[a-zA-Z0-9-]+\.)?[a-zA-Z]+\.)?(unibo|studio.unibo)\.it$" placeholder="example@unibo.it" title="Only Unibo Mail accepted (@unibo.it or @studio.unibo.it)" required="true">
+                <!-- <input type="mail" class="form-control" id="Responsible" name="Responsible" pattern="^[a-zA-Z0-9_.+-]+@(?:(?:[a-zA-Z0-9-]+\.)?[a-zA-Z]+\.)?(unibo|studio.unibo)\.it$" placeholder="example@unibo.it" title="Only Unibo Mail accepted (@unibo.it or @studio.unibo.it)" required="true"> -->
+                <label for="Responsible">Contact Mail</label>
+                <select class="form-control" id="Responsible" name="Responsible" required="true">
+                    <option value="" selected>Address for confirmation emal</option>
+                </select>
                 </div>
 
             <!--privacy-->
@@ -128,9 +132,86 @@ $(document).ready(function () {
     var len = 1
 
     var courses_data = JSON.parse('{{ courses_data | tojson | safe}}');
+    var project_data = {{ project_data | tojson | safe }};
+    var authors_data = {{ authors_data | tojson | safe }};
+    // project_data_str = project_data_str.replace(/u?'(.+?)': u?'(.+?)'/g, '"$1":"$2"').replace(/&quot;/ig,'"').replace('\\"','"');
+    // var project_data = JSON.parse(project_data_str);
+
+    console.log(project_data);
+    document.getElementById('Title').value=project_data['title']
+    document.getElementById('Repository').value=project_data['repository']
+    document.getElementById('Homepage').value=project_data['homepage']
+    document.getElementById('Description').value=project_data['description']    
+
     for (var i = 0; i < courses_data.length; i++) {
         $("#Year").append('<option value="'+ courses_data[i].year +'">'+ courses_data[i].year + '</option>')
         }
+    console.log(authors_data)
+    for (var i = 0; i < authors_data.length; i++) {
+        $("#Responsible").append('<option value="'+ authors_data[i].mail +'">'+ authors_data[i].mail + '</option>')
+    }
+
+
+    document.getElementById('Aut[0][Name]').value=authors_data[0]['name']
+    document.getElementById('Aut[0][Surname]').value=authors_data[0]['surname']
+    document.getElementById('Aut[0][Mail]').value=authors_data[0]['mail']
+
+
+
+
+    
+
+
+    for (i=0; i < authors_data.length; i++){
+        next = next + 1;
+        $(".delete").removeClass("disabled")
+
+        var template = '<div class="form-group author-fields card author-item mt-3 text-left text-sm-center" id="item-' + next + '">\
+                            <div class="card-header text-body-secondary bg-white d-flex flex-row justify-content-end">\
+                                <button type="button" class="btn btn-danger btn-sm delete" for="item-' + next + '">\
+                                    <span aria-hidden="true">&times;</span>\
+                                </button>\
+                            </div>\
+                            <div class="card-body text-body-secondary bg-white p-3">\
+                                <div class="row">\
+                                    <div class="col-12 pr-0 authorname">\
+                                        <div class="mb-2 form-floating">\
+                                            <input type="text" class="form-control" id="Aut[' + next + '][Name]"  name="Aut[' + next + '][Name]"  required="true" placeholder="Enter Author&#39;s Name">\
+                                            <label for="Aut[' + next + '][Name]" class="col-sm-4 col-form-label">Author Name</label>\
+                                        </div>\
+                                        <div class="mb-2 form-floating">\
+                                            <input type="text" class="form-control" id="Aut[' + next + '][Surname]"  name="Aut[' + next + '][Surname]"  required="true" placeholder="Enter Author&#39;s Surname">\
+                                            <label for="Aut[' + next + '][Surname]"  class="col-sm-4 col-form-label">Author Surname</label>\
+                                        </div>\
+                                        <div class="form-floating">\
+                                            <input type="mail" class="form-control" id="Aut[' + next + '][Mail]" name="Aut[' + next + '][Mail]" pattern="^[a-zA-Z0-9_.+-]+@(?:(?:[a-zA-Z0-9-]+\.)?[a-zA-Z]+\.)?(unibo|studio.unibo)\.it$" placeholder="Enter Author&#39;s Unibo Mail" title="Only Unibo Mail accepted (@unibo.it or @studio.unibo.it)" required="true">\
+                                            <label for="Aut[' + next + '][Mail]"  class="col-sm-4 col-form-label">UniboMail</label>\
+                                        </div>\
+                                    </div>\
+                                </div>\
+                            </div>\
+                        </div>'
+        
+        $('#author-container .author-container-body').append(template);
+        document.getElementById('Aut['+i+'][Name]').value=authors_data[i]['name']
+        document.getElementById('Aut['+i+'][Surname]').value=authors_data[i]['surname']
+        document.getElementById('Aut['+i+'][Mail]').value=authors_data[i]['mail']
+
+        len = $('.author-item').length;            
+
+        $(".delete").click(function(){
+            var target = $(this).attr('for');
+            $('#'+ target).remove()
+            len = $('.author-item').length;
+            if (len === 1){
+                $(".delete").addClass("disabled")
+                $(".authorname").removeClass("col-11 pr-0")
+                $(".authorname").addClass("col-12")
+            }
+        });
+    }
+
+    
 
     $("#add-more").click(function(e){
         e.preventDefault();
@@ -161,8 +242,6 @@ $(document).ready(function () {
                                 </div>\
                             </div>\
                         </div>'
-        
-
         $('#author-container .author-container-body').append(template);
         len = $('.author-item').length;            
 
