--- a/app/templates/projects.html
+++ b/app/templates/projects.html
@@ -345,7 +345,7 @@
           <div>
             <div class="proj-item" v-for="item of searchResult.data.items">
               
-              <form v-bind:action="'{{ url_for('EditProject', id="") }}' + [[item.graph]]" method="POST">
+              <form v-bind:action="'{{ url_for('update', id="") }}' + [[item.graph]]" method="POST">
                 
               <h3 class="mt-3" style="word-wrap: break-word;">[[ item.title ]]</h3>
               <div class="mb-3 ">
