--- a/app/templates/update.html
+++ b/app/templates/update.html
@@ -119,7 +119,8 @@
             </div>
 
 
-            <button type="submit" class="btn btn-primary">Submit</button>
+            <!-- <button type="submit" class="btn btn-primary">Submit</button> -->
+            <input type="submit" class="btn btn-primary mb-3"  name="action" value="Submit">
 
         </form>
     </div>
