project editing functional -- added

--- a/app/templates/update.html
+++ b/app/templates/update.html
@@ -120,6 +120,7 @@
 
 
             <!-- <button type="submit" class="btn btn-primary">Submit</button> -->
+            <input class="btn btn-warning mb-3 d-none"  name="graphid" value="{{project_data.graph}}">
             <input type="submit" class="btn btn-primary mb-3"  name="action" value="Submit">
 
         </form>
