--- a/app/templates/confirmation_form.html
+++ b/app/templates/confirmation_form.html
@@ -2,7 +2,7 @@
 
 {% block content %}
     <div class= "container" style="margin-top: 40px; text-align: center;">
-            <h2>Uploaded Data Summary</h2>
+            <h2>{{ routing_data["title_text"] }}</h2>
         <div class="border-bottom border-top" style="text-align: left; margin-top: 30px; margin-bottom: 30px;">
             <ul>
                 <li><b>Title:</b> {{ data["Title"]}}</li>
@@ -22,7 +22,7 @@
                 <li><b>Course's Academic Year:</b> {{ data["Year"]}}</li>
             </ul>
         </div>
-        <form action="{{ url_for('confirmation', token=token) }}" method="POST">
+        <form action="{{ url_for(routing_data['url_for'], token=token) }}" method="POST">
             <button class="btn btn-success mr-3" name="selection" type="submit" value="confirm" onclick="return confirm('Are you sure to confirm?')">Confirm</button>
             <button class="btn btn-danger" name="selection" type="submit" value="reject" onclick="return confirm('Are you sure to cancel?')">Cancel</button>
         </form>
